<resources>
    <string name="app_name">My place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar_con_facebook">Ingresar con Facebook</string>
    <string name="ingresar_con_google">Ingresar con Google</string>
    <string name="ingresa_con_tu_correo">Ingresa con tu correo</string>
    <string name="correo_o_numero">Correo o numero</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste_tu_contrase_a">¿olvidaste tu contraseña?</string>
    <string name="registrate">Registrate</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate_con_tu_correo">Registrate con tu correo</string>
    <string name="title_activity_buscador">Buscador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Configuracion">Configuración</string>

    <string name="menu_home">Buscador</string>
    <string name="menu_gallery">Guardados</string>
    <string name="menu_slideshow">Configuración</string>
    <string name="menu_terminos">Terminos y condiciones</string>
    <string name="home_second">Cerrar sesión</string>
</resources>
