<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_buscar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_configurar"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_Terms"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_terminos" />
        <item
            android:id="@+id/nav_Out"
            android:icon="@drawable/ic_close"
            android:title="@string/home_second" />
    </group>
</menu>
